nbs_ipi/day2/router.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
  finalizers:
  - ingress.openshift.io/operator
  labels:
    app: router
    ingresscontroller.operator.openshift.io/owning-ingresscontroller: default
    router: router-default
  name: router-default
  namespace: openshift-ingress
  ownerReferences:
  - apiVersion: apps/v1
    controller: true
    kind: Deployment
    name: router-default
    uid: 6d1ae35d-eb35-11e9-a029-02c0af6f127c
  resourceVersion: "8188"
  selfLink: /api/v1/namespaces/openshift-ingress/services/router-default
  uid: 6d49d567-eb35-11e9-a029-02c0af6f127c
spec:
  clusterIP: 172.30.189.218
  externalTrafficPolicy: Local
  healthCheckNodePort: 30087
  ports:
  - name: http
    nodePort: 30211
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 31478
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    ingresscontroller.operator.openshift.io/deployment-ingresscontroller: default
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: a6d49d567eb3511e9a02902c0af6f127-1845011448.eu-west-2.elb.amazonaws.com



      extraScopes: 
      - email
      - profile
      extraAuthorizeParameters: 
        include_granted_scopes: "true"
      claims:
        preferredUsername: 
        - preferred_username
        - email
        name: 
        - nickname
        - given_name
        - name
        email: 
        - custom_email_claim
        - email
