nbs_ipi/day2/route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: oauth-luminate
  name: oauth-luminate
  namespace: openshift-authentication
spec:
  host: oauth-openshift.nationwidebuilding.luminatesec.com
  port:
    targetPort: 6443
  subdomain: ""
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: oauth-openshift
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2019-11-21T12:21:29Z"
      status: "True"
      type: Admitted
    host: oauth-openshift.nationwidebuilding.luminatesec.com
    routerCanonicalHostname: apps.cluster01.nbs-mc-ocp1-dv.azure.nbscoe.co.uk
    routerName: default
    wildcardPolicy: None
